fix alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -18,6 +18,7 @@ p.footer {
     flex-direction: column;
     min-height: 20vh;
     max-height: 20vh;
+    max-width: 100vw;
     align-items: center;
     justify-content: flex-end;
 }
