--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@ body {
 
 .secret {
     position: absolute;
-    left: calc(100vw - 3vw); 
+    left: calc(100vw - 7vh - 0.25vh); 
     top: 0;
     font-weight: normal;
     font-size: 2vh;
     color: #353b46;
     background: #282c34;
     border: 0.25vh solid #353b46;
-    width: 3vw;
+    width: 7vh;
     height: 5vh;
 }
 
