--- a/src/pages/ComingSoon.css
+++ b/src/pages/ComingSoon.css
@@ -3,7 +3,7 @@
 }
 
 .ComingSoon-logo {
-    height: 40vmin;
+    height: 40vw;
     pointer-events: none;
 }
 
@@ -21,6 +21,7 @@
     justify-content: center;
     min-height: 80vh;
     max-height: 80vh;
+    max-width: 100vw;
     font-size: calc(3vmin);
 }
 
